# attestation

./: .env.example  .gitignore  Dockerfile  README.md  TechDoc.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
electronics_network/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
electronics_network/migrations/: 0001_initial.py  0002_alter_product_options_alter_supplier_options_and_more.py
users/: admin.py  models.py  permissions.py  tests.py  urls.py
users/migrations/: 0001_initial.py  0002_remove_customuser_is_employee.py  0003_alter_customuser_groups_alter_customuser_is_active.py
